# OS_lab5

Lab5_q2/: notes.txt
Lab5_q3/: notes.txt
cpu_sched_intro_prio/: CMakeLists.txt  notes_ex1.txt  priority_experiments_table.csv
cpu_sched_intro_prio/include/: cpu_sched_prio.h
cpu_sched_intro_prio/src/: cpu_sched_prio.c  main.c
